--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
             </section>
 
-            <section class="apartments">
+            <!-- <section class="apartments">
                 <div class="wrapper apart">
                     <h2>Более 50+ <br />крутых и интересных заведений</h2>
                     <div class="cards">
@@ -258,8 +258,22 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section>-->
         </main>
+        <footer>
+            <div class="footer-block">
+                <div class="footer-left"></div>
+                <div class="footer-text">
+                    <h3>2021 © Kudapoidem</h3>
+                    <p>Все права защищены.</p>
+                </div>
+                <div class="footer-icons">
+                    <img src="/img/icon-insta.svg" alt="Instagram" />
+                    <img src="/img/icon-twitter.svg" alt="Twitter" />
+                    <img src="/img/icon-facebook.svg" alt="Facebook" />
+                </div>
+            </div>
+        </footer>
         <script src="/js/jquery-3.6.0.min.js"></script>
         <script src="/js/slick.min.js"></script>
         <script src="/js/script.js"></script>
