--- a/css/places.html
+++ b/css/places.html
@@ -56,17 +56,17 @@
                         <img src="/img/place-img1.jpg" alt="" />
 
                         <div class="place-info">
-                            <span title="hot" id="text-adress"
+                            <span title="map" class="text-adress"
                                 ><i class="fas fa-map-marker-alt" ></i>
                                     Адрес: г.Минск, ул. Интернациональная, 15</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="food"
                                 ><i class="fas fa-utensils">
                                     Кухня: Европейская</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="price"
                                 ><i class="fas fa-dollar-sign">
                                     Средняя цена за чек: 40 BYN</i
                                 ></span
@@ -81,17 +81,17 @@
                         <img src="/img/place-img2.jpg" alt="" />
 
                         <div class="place-info">
-                            <span title="hot" id="text-adress"
+                            <span title="map" class="text-adress"
                                 ><i class="fas fa-map-marker-alt"></i>
                                 Адрес: г.Минск, ул. Франциска Скорины, 11</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="food"
                                 ><i class="fas fa-utensils">
                                     Кухня: Азиатская</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="price"
                                 ><i class="fas fa-dollar-sign">
                                     Средняя цена за чек: 35 BYN</i
                                 ></span
@@ -106,17 +106,17 @@
                         <img src="/img/place-img3.jpg" alt="" />
 
                         <div class="place-info">
-                            <span title="hot" id="text-adress"
+                            <span title="map" class="text-adress"
                                 ><i class="fas fa-map-marker-alt"></i>
                                 Адрес: г.Минск, ул. Центральная, 123</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="food"
                                 ><i class="fas fa-utensils">
                                     Кухня: Европейская</i
                                 ></span
                             >
-                            <span title="cinema" 
+                            <span title="price" 
                                 ><i class="fas fa-dollar-sign">
                                     Средняя цена за чек: 10 BYN</i
                                 ></span
@@ -131,17 +131,17 @@
                         <img src="/img/place-img4.jpg" alt="" />
 
                         <div class="place-info">
-                            <span title="hot" id="text-adress"
+                            <span title="map" class="text-adress"
                                 ><i class="fas fa-map-marker-alt"></i>
                                 Адрес: г.Минск, ул. Коммунистическая, 27</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="food"
                                 ><i class="fas fa-utensils">
                                     Кухня: Европейская</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="price"
                                 ><i class="fas fa-dollar-sign">
                                     Средняя цена за чек: 15 BYN</i
                                 ></span
@@ -156,17 +156,17 @@
                         <img src="/img/place-img5.jpg" alt="" />
 
                         <div class="place-info">
-                            <span title="hot" id="text-adress"
+                            <span title="map" class="text-adress"
                                 ><i class="fas fa-map-marker-alt"></i>
                                 Адрес: г.Минск, ул. Зыбицкая, 18</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="food"
                                 ><i class="fas fa-utensils">
                                     Кухня: Европейская, американская</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="price"
                                 ><i class="fas fa-dollar-sign">
                                     Средняя цена за чек: 35 BYN</i
                                 ></span
@@ -181,17 +181,17 @@
                         <img src="/img/place-img6.jpg" alt="" />
 
                         <div class="place-info">
-                            <span title="hot" id="text-adress"
+                            <span title="map" class="text-adress"
                                 ><i class="fas fa-map-marker-alt"></i>
                                 Адрес: г.Минск, пр-т Победителей, 118</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="food"
                                 ><i class="fas fa-utensils">
                                     Кухня: Европейская</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="price"
                                 ><i class="fas fa-dollar-sign">
                                     Средняя цена за чек: 100 BYN</i
                                 ></span
@@ -206,17 +206,17 @@
                         <img src="/img/place-img7.jpg" alt="" />
 
                         <div class="place-info">
-                            <span title="hot" id="text-adress"
+                            <span title="map" class="text-adress"
                                 ><i class="fas fa-map-marker-alt"></i>
                                 Адрес: г.Минск, ул. Гикало, 2</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="food"
                                 ><i class="fas fa-utensils">
                                     Кухня: Американская</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="price"
                                 ><i class="fas fa-dollar-sign">
                                     Средняя цена за чек: 45 BYN</i
                                 ></span
@@ -231,17 +231,17 @@
                         <img src="/img/place-img8.jpg" alt="" />
 
                         <div class="place-info">
-                            <span title="hot" id="text-adress"
+                            <span title="map" class="text-adress"
                                 ><i class="fas fa-map-marker-alt"></i>
                                 Адрес: г.Минск, ул. К. Маркса, 45</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="food"
                                 ><i class="fas fa-utensils">
                                     Кухня: Европейская</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="price"
                                 ><i class="fas fa-dollar-sign">
                                     Средняя цена за чек: 17 BYN</i
                                 ></span
@@ -256,17 +256,17 @@
                         <img src="/img/place-img9.jpg" alt="" />
 
                         <div class="place-info">
-                            <span title="hot" id="text-adress"
+                            <span title="map" class="text-adress"
                                 ><i class="fas fa-map-marker-alt"></i>
                                 Адрес: г.Минск, ул. Брест-Литовская, 9</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="food"
                                 ><i class="fas fa-utensils">
                                     Кухня: Французская</i
                                 ></span
                             >
-                            <span title="cinema"
+                            <span title="price"
                                 ><i class="fas fa-dollar-sign">
                                     Средняя цена за чек: 70 BYN</i
                                 ></span
