--- a/css/places.html
+++ b/css/places.html
@@ -19,13 +19,13 @@
                 <input type="checkbox" id="checkbox-menu" />
                 <label for="checkbox-menu">
                     <ul class="menu touch">
-                        <li><a class="logo" href="#"></a></li>
+                        <li><a class="logo" href="/index.html"></a></li>
                         <li>
                             <a class="bordleft search-mini" href="#">Поиск</a>
                         </li>
                         <li><a class="bordleft" href="#">О нас</a></li>
-                        <li><a class="bordleft" href="#">Новости</a></li>
-                        <li><a class="bordleft" href="#">Места</a></li>
+                        <li><a class="bordleft" href="/css/news.html">Новости</a></li>
+                        <li><a class="bordleft" href="/css/places.html">Места</a></li>
                         <li><a class="bordleft contacts" href="#">Люди</a></li>
                         <li><a class="bordleft" href="#">Профиль</a></li>
                         <li><a class="bordleft" href="#">Регистрация</a></li>
