add people.html, edit places.html and style.css

--- a/css/places.html
+++ b/css/places.html
@@ -24,8 +24,16 @@
                             <a class="bordleft search-mini" href="#">Поиск</a>
                         </li>
                         <li><a class="bordleft" href="#">О нас</a></li>
-                        <li><a class="bordleft" href="/css/news.html">Новости</a></li>
-                        <li><a class="bordleft" href="/css/places.html">Места</a></li>
+                        <li>
+                            <a class="bordleft" href="/css/news.html"
+                                >Новости</a
+                            >
+                        </li>
+                        <li>
+                            <a class="bordleft" href="/css/places.html"
+                                >Места</a
+                            >
+                        </li>
                         <li><a class="bordleft contacts" href="#">Люди</a></li>
                         <li><a class="bordleft" href="#">Профиль</a></li>
                         <li><a class="bordleft" href="#">Регистрация</a></li>
@@ -57,7 +65,7 @@
 
                         <div class="place-info">
                             <span title="map" class="text-adress"
-                                ><i class="fas fa-map-marker-alt" ></i>
+                                ><i class="fas fa-map-marker-alt">
                                     Адрес: г.Минск, ул. Интернациональная, 15</i
                                 ></span
                             >
@@ -82,8 +90,8 @@
 
                         <div class="place-info">
                             <span title="map" class="text-adress"
-                                ><i class="fas fa-map-marker-alt"></i>
-                                Адрес: г.Минск, ул. Франциска Скорины, 11</i
+                                ><i class="fas fa-map-marker-alt">
+                                    Адрес: г.Минск, ул. Франциска Скорины, 11</i
                                 ></span
                             >
                             <span title="food"
@@ -107,8 +115,8 @@
 
                         <div class="place-info">
                             <span title="map" class="text-adress"
-                                ><i class="fas fa-map-marker-alt"></i>
-                                Адрес: г.Минск, ул. Центральная, 123</i
+                                ><i class="fas fa-map-marker-alt">
+                                    Адрес: г.Минск, ул. Центральная, 123</i
                                 ></span
                             >
                             <span title="food"
@@ -116,7 +124,7 @@
                                     Кухня: Европейская</i
                                 ></span
                             >
-                            <span title="price" 
+                            <span title="price"
                                 ><i class="fas fa-dollar-sign">
                                     Средняя цена за чек: 10 BYN</i
                                 ></span
@@ -132,8 +140,8 @@
 
                         <div class="place-info">
                             <span title="map" class="text-adress"
-                                ><i class="fas fa-map-marker-alt"></i>
-                                Адрес: г.Минск, ул. Коммунистическая, 27</i
+                                ><i class="fas fa-map-marker-alt">
+                                    Адрес: г.Минск, ул. Коммунистическая, 27</i
                                 ></span
                             >
                             <span title="food"
@@ -157,8 +165,8 @@
 
                         <div class="place-info">
                             <span title="map" class="text-adress"
-                                ><i class="fas fa-map-marker-alt"></i>
-                                Адрес: г.Минск, ул. Зыбицкая, 18</i
+                                ><i class="fas fa-map-marker-alt">
+                                    Адрес: г.Минск, ул. Зыбицкая, 18</i
                                 ></span
                             >
                             <span title="food"
@@ -182,8 +190,8 @@
 
                         <div class="place-info">
                             <span title="map" class="text-adress"
-                                ><i class="fas fa-map-marker-alt"></i>
-                                Адрес: г.Минск, пр-т Победителей, 118</i
+                                ><i class="fas fa-map-marker-alt">
+                                    Адрес: г.Минск, пр-т Победителей, 118</i
                                 ></span
                             >
                             <span title="food"
@@ -207,8 +215,8 @@
 
                         <div class="place-info">
                             <span title="map" class="text-adress"
-                                ><i class="fas fa-map-marker-alt"></i>
-                                Адрес: г.Минск, ул. Гикало, 2</i
+                                ><i class="fas fa-map-marker-alt">
+                                    Адрес: г.Минск, ул. Гикало, 2</i
                                 ></span
                             >
                             <span title="food"
@@ -232,8 +240,8 @@
 
                         <div class="place-info">
                             <span title="map" class="text-adress"
-                                ><i class="fas fa-map-marker-alt"></i>
-                                Адрес: г.Минск, ул. К. Маркса, 45</i
+                                ><i class="fas fa-map-marker-alt">
+                                    Адрес: г.Минск, ул. К. Маркса, 45</i
                                 ></span
                             >
                             <span title="food"
@@ -257,8 +265,8 @@
 
                         <div class="place-info">
                             <span title="map" class="text-adress"
-                                ><i class="fas fa-map-marker-alt"></i>
-                                Адрес: г.Минск, ул. Брест-Литовская, 9</i
+                                ><i class="fas fa-map-marker-alt">
+                                    Адрес: г.Минск, ул. Брест-Литовская, 9</i
                                 ></span
                             >
                             <span title="food"
