--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Куда пойдем?</title>
         <link rel="stylesheet" href="/css/normalize.css" />
         <link rel="stylesheet" href="/css/style.css" />
+        <link rel="icon" href="/img/favicon.png" type="image/x-icon" />
         <script
             src="https://kit.fontawesome.com/6ff2b18920.js"
             crossorigin="anonymous"
@@ -142,72 +143,8 @@
 
             <!-- <section class="apartments">
                 <div class="wrapper apart">
-                    <h2>Более 50+ <br />крутых и интересных заведений</h2>
-                    <div class="cards">
-                        <div class="card">
-                            <img src="/img/card-image.jpg" alt="" />
-                            <div class="card-container">
-                                <p>
-                                    Lorem ipsum, dolor sit amet consectetur
-                                    adipisicing elit.
-                                </p>
-                                <div class="card-info">
-                                    <div class="money">3,500$</div>
-                                    <div class="info">
-                                        <span
-                                            ><i class="fas fa-shower"></i
-                                            >2BA</span
-                                        >
-                                        <span
-                                            ><i class="fas fa-bed"></i>2BD</span
-                                        >
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <img src="/img/card-image.jpg" alt="" />
-                            <div class="card-container">
-                                <p>
-                                    Lorem ipsum, dolor sit amet consectetur
-                                    adipisicing elit.
-                                </p>
-                                <div class="card-info">
-                                    <div class="money">3,500$</div>
-                                    <div class="info">
-                                        <span
-                                            ><i class="fas fa-shower"></i
-                                            >2BA</span
-                                        >
-                                        <span
-                                            ><i class="fas fa-bed"></i>2BD</span
-                                        >
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <img src="/img/card-image.jpg" alt="" />
-                            <div class="card-container">
-                                <p>
-                                    Lorem ipsum, dolor sit amet consectetur
-                                    adipisicing elit.
-                                </p>
-                                <div class="card-info">
-                                    <div class="money">3,500$</div>
-                                    <div class="info">
-                                        <span
-                                            ><i class="fas fa-shower"></i
-                                            >2BA</span
-                                        >
-                                        <span
-                                            ><i class="fas fa-bed"></i>2BD</span
-                                        >
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    
+                    
                     <div class="buttons-search">
                         <form action="">
                             <input type="text" placeholder="Искать заведение" />
