--- a/css/news.html
+++ b/css/news.html
@@ -7,7 +7,7 @@
         <title>Куда пойдем?</title>
         <link rel="stylesheet" href="/css/normalize.css" />
         <link rel="stylesheet" href="/css/style.css" />
-
+        <link rel="icon" href="/img/favicon.png" type="image/x-icon" />
         <script
             src="https://kit.fontawesome.com/6ff2b18920.js"
             crossorigin="anonymous"
@@ -34,7 +34,11 @@
                                 >Места</a
                             >
                         </li>
-                        <li><a class="bordleft contacts" href="#">Люди</a></li>
+                        <li>
+                            <a class="bordleft contacts" href="/css/people.html"
+                                >Люди</a
+                            >
+                        </li>
                         <li><a class="bordleft" href="#">Профиль</a></li>
                         <li><a class="bordleft" href="#">Регистрация</a></li>
                     </ul>
