--- a/css/people.html
+++ b/css/people.html
@@ -7,7 +7,7 @@
         <title>Куда пойдем?</title>
         <link rel="stylesheet" href="/css/normalize.css" />
         <link rel="stylesheet" href="/css/style.css" />
-
+        <link rel="icon" href="/img/favicon.png" type="image/x-icon" />
         <script
             src="https://kit.fontawesome.com/6ff2b18920.js"
             crossorigin="anonymous"
@@ -34,7 +34,11 @@
                                 >Места</a
                             >
                         </li>
-                        <li><a class="bordleft contacts" href="#">Люди</a></li>
+                        <li>
+                            <a class="bordleft contacts" href="/css/people.html"
+                                >Люди</a
+                            >
+                        </li>
                         <li><a class="bordleft" href="#">Профиль</a></li>
                         <li><a class="bordleft" href="#">Регистрация</a></li>
                     </ul>
@@ -49,7 +53,6 @@
                         <div class="buttons-search">
                             <form action="">
                                 <input type="text" placeholder="Поиск" />
-                                <input type="submit" value="Искать" />
                             </form>
                         </div>
 
@@ -64,8 +67,7 @@
                                 <div class="people-button">
                                     <img src="/img/addfriend-icon.svg" alt="" />
                                     <button class="btn-addfriend">
-                                        Добавить в <br />
-                                        друзья
+                                        Добавить в друзья
                                     </button>
                                 </div>
                             </div>
@@ -75,14 +77,13 @@
                                 <img src="/img/person2.jpg" alt="" />
                             </div>
                             <div class="people-text">
-                                <h4>Татьяна Макарова</h4>
-                                <p>Минск, 24 года</p>
+                                <h4>Коля Трачевский</h4>
+                                <p>Витебск, 33 года</p>
 
                                 <div class="people-button">
                                     <img src="/img/addfriend-icon.svg" alt="" />
                                     <button class="btn-addfriend">
-                                        Добавить в <br />
-                                        друзья
+                                        Добавить в друзья
                                     </button>
                                 </div>
                             </div>
@@ -92,14 +93,13 @@
                                 <img src="/img/person3.jpg" alt="" />
                             </div>
                             <div class="people-text">
-                                <h4>Татьяна Макарова</h4>
-                                <p>Минск, 24 года</p>
+                                <h4>Игнат Василевский</h4>
+                                <p>Минск, 23 года</p>
 
                                 <div class="people-button">
                                     <img src="/img/addfriend-icon.svg" alt="" />
                                     <button class="btn-addfriend">
-                                        Добавить в <br />
-                                        друзья
+                                        Добавить в друзья
                                     </button>
                                 </div>
                             </div>
@@ -109,14 +109,13 @@
                                 <img src="/img/person4.jpg" alt="" />
                             </div>
                             <div class="people-text">
-                                <h4>Татьяна Макарова</h4>
-                                <p>Минск, 24 года</p>
+                                <h4>Ульяна Хвощевская</h4>
+                                <p>Минск, 32 года</p>
 
                                 <div class="people-button">
                                     <img src="/img/addfriend-icon.svg" alt="" />
                                     <button class="btn-addfriend">
-                                        Добавить в <br />
-                                        друзья
+                                        Добавить в друзья
                                     </button>
                                 </div>
                             </div>
