--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                                 >Места</a
                             >
                         </li>
-                        <li><a class="bordleft contacts" href="#">Люди</a></li>
+                        <li>
+                            <a class="bordleft contacts" href="/css/people.html"
+                                >Люди</a
+                            >
+                        </li>
                         <li><a class="bordleft" href="#">Профиль</a></li>
                         <li><a class="bordleft" href="#">Регистрация</a></li>
                     </ul>
