add about.html and fix adaptability

--- a/css/people.html
+++ b/css/people.html
@@ -21,9 +21,13 @@
                     <ul class="menu touch">
                         <li><a class="logo" href="/index.html"></a></li>
                         <li>
-                            <a class="bordleft search-mini" href="#">Поиск</a>
+                            <a class="bordleft search-mini" href="/index.html"
+                                >Главная</a
+                            >
                         </li>
-                        <li><a class="bordleft" href="#">О нас</a></li>
+                        <li>
+                            <a class="bordleft" href="/css/about.html">О нас</a>
+                        </li>
                         <li>
                             <a class="bordleft" href="/css/news.html"
                                 >Новости</a
@@ -157,6 +161,7 @@
                                     >
                                         <option>Мужcкой</option>
                                         <option>Женский</option>
+                                        <option>Любой</option>
                                     </select>
                                 </div>
 
@@ -180,7 +185,7 @@
                                         type="text"
                                         name="age"
                                         id="age-last"
-                                        placeholder="90"
+                                        placeholder="99"
                                     />
                                 </div>
                             </div>
