--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
                     <ul class="menu touch">
                         <li><a class="logo" href="/index.html"></a></li>
                         <li>
-                            <a class="bordleft search-mini" href="#">Поиск</a>
+                            <a class="bordleft search-mini" href="/index.html"
+                                >Главная</a
+                            >
                         </li>
-                        <li><a class="bordleft" href="#">О нас</a></li>
+                        <li>
+                            <a class="bordleft" href="/css/about.html">О нас</a>
+                        </li>
                         <li>
                             <a class="bordleft" href="/css/news.html"
                                 >Новости</a
@@ -144,69 +148,6 @@
                     </div>
                 </div>
             </section>
-
-            <!-- <section class="apartments">
-                <div class="wrapper apart">
-                    
-                    
-                    <div class="buttons-search">
-                        <form action="">
-                            <input type="text" placeholder="Искать заведение" />
-                            <input type="submit" value="Искать" />
-                        </form>
-                        <button class="all">Посмотреть все места</button>
-                    </div>
-                </div>
-            </section>
-            <section class="steps">
-                <div class="wrapper">
-                    <h2>How It Works</h2>
-                    <p class="steps-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit.
-                    </p>
-                    <p class="steps-text mbtext">
-                        Lorem ipsum dolor sit amet consectetur adipisicing<br />
-                        elit. Veniam, eligendi quo!
-                    </p>
-                    <div class="steps-container">
-                        <div class="stepblock" id="stepbl1">
-                            <p class="step-num">01</p>
-                            <h4><span>01</span>Find</h4>
-                            <p class="step-info">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Assumenda deleniti impedit
-                                architecto quisquam eius.
-                            </p>
-                            <p class="stepinfolast">Find Location</p>
-                        </div>
-                        <div class="stepblock">
-                            <p class="step-num">02</p>
-                            <h4><span>02</span>Find</h4>
-                            <p class="step-info">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Assumenda deleniti impedit
-                                architecto quisquam eius.
-                            </p>
-                            <p class="stepinfolast" id="stepbrdr2">
-                                Find Location
-                            </p>
-                        </div>
-                        <div class="stepblock">
-                            <p class="step-num">03</p>
-                            <h4><span>03</span>Find</h4>
-                            <p class="step-info">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Assumenda deleniti impedit
-                                architecto quisquam eius.
-                            </p>
-                            <p class="stepinfolast" id="stepbrdr3">
-                                Find Location
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>-->
         </main>
         <footer>
             <div class="footer-block">
